--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,4 +6,10 @@ services:
       dockerfile: Dockerfile
     ports:
       - 3000:3000
+    env_file:
+      - .env
+    env:
+      - WORKER: 0
+      - LIMIT: 20
+      - PORT: 3000
     command: pnpm run start:prod
